add the actual 1.0 release

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -29,11 +29,11 @@
     
 	<p>
 	The current version is 1.0-0.13 (meaning 1.0, based on bazaar 0.13),
-	released on 23 Dec 2006.
+	released on 23 Dec 2006 at revision 64.
     </p>
     <ul class="downloads">
     <li> <a href="download/loggerhead-1.0-0.13.tar.gz"> loggerhead-1.0-0.13.tar.gz </a>
-        <br /> <span class="md5"> MD5: dbcdd92cdac84ea2cf9dabb4b37af58e </span>
+        <br /> <span class="md5"> MD5: 1b68c1dc6e13f9ed8f2b3ff0267cd8d9 </span>
         </li>
     </ul>
     
